Add a new endpoingt
