# RedoclyDemo/Controllers/CalculatorController.cs
@@ -30,6 +30,13 @@ public class CalculatorController : ControllerBase
     public ActionResult<double> Divide(double left, double right)
         => Execute(left, right, CalculatorOperation.Division);
 
+    [HttpGet("multipleAdd")]
+    public ActionResult<double> MultipleAdd(double left, double right)
+    {
+        var result = _handler.MultiplyThenAdd(left, right);
+        return Ok(result);
+    }
+
     private ActionResult<double> Execute(double left, double right, CalculatorOperation operation)
     {
         try
